<resources>
    <string name="app_name">BW Afica</string>
    <string name="welcome">Welcome</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="no_internet">No internet connection!</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="get_product_data">Get Product Data</string>
    <string name="no_data">No data found!</string>
    <string name="name">Name</string>
    <string name="mohit_savaj">Mohit Savaj</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="product_data">Product Data</string>
    <string name="player_image_question">Can you identify the player in the image below? Try to guess their name!</string>
    <string name="player_birthplace_question">Can you guess the birthplace of the player shown in the image below?</string>
    <string name="player_nationality_question">Can you guess the nationality of the player " %s "?</string>
    <string name="player_position_question">Can you guess the position of the player " %s "?</string>
    <string name="done">Done</string>
    <string name="play">PLAY</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="score">SCORE</string>
    <string name="_1">1</string>
    <string name="_5_10">5-10</string>
    <string name="_25_pt">25Pt</string>
    <string name="_13_05_24">13/05/24</string>
    <string name="sound">Sound</string>
    <string name="how_to_play">How to play?</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="_01_of_25">01 of 25</string>
    <string name="_04_40">04:40</string>
    <string name="a">A</string>
    <string name="next">Next</string>
    <string name="congratulations">Congratulations !</string>
    <string name="you_ve_scored_80_points">You\'ve scored &lt;font color=\'#00C71B\'&gt;+%1$s&lt;/font&gt; points</string>
    <string name="total_que">Total Que</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="result">RESULT</string>
    <string name="no_quiz_available">No Quiz available</string>
    <string name="preparing_quiz">Preparing Quiz for you</string>
    <string name="please_select_answer">Please select answer</string>
    <string name="how_to_play_description">Welcome to the BW Quiz Challenge! Test your Football knowledge and have fun!\n\nYour goal is to answer as many questions correctly as possible to generate the highest score.\n\nYou will be presented with 25 questions.\nEach question has multiple choice answers.\nSelect the answer you think is correct.\nYou have a 30 seconds time to answer each question.\nEach correct answer awards you 10 points.\nThere are no penalties for incorrect answers.\nthe game ends when you have answered all 25 questions.\nYour final result will be displayed.\n\nPlay again to improve your score!</string>
</resources>